--- a/bower.json
+++ b/bower.json
@@ -3,16 +3,17 @@
   "description": "A behavior that helps with scrolling of elements.",
   "main": "ft-scrolling-behavior.html",
   "dependencies": {
-    "polymer": "Polymer/polymer#^2.0.1"
+    "polymer": "Polymer/polymer#1.9 - 2"
   },
   "devDependencies": {
-    "iron-component-page": "PolymerElements/iron-component-page#^2.0.0",
-    "iron-demo-helpers": "PolymerElements/iron-demo-helpers#^2.0.0",
-    "web-component-tester": "^4.0.0",
+    "iron-component-page": "PolymerElements/iron-component-page#1 - 2",
+    "iron-demo-helpers": "PolymerElements/iron-demo-helpers#1 - 2",
+    "iron-test-helpers": "PolymerElements/iron-test-helpers#1 - 2",
+    "web-component-tester": "^6.0.0",
     "webcomponentsjs": "webcomponents/webcomponentsjs#^1.0.0"
   },
   "resolutions": {
-    "polymer": "^2.0.1",
-    "webcomponentsjs": "^v1.0.0"
+    "polymer": "1.9 - 2",
+    "webcomponentsjs": "^1.0.0"
   }
 }
